--- a/itstack-demo-worker-web/src/main/webapp/res/jquery-easyui-1.4/themes/icon.css
+++ b/itstack-demo-worker-web/src/main/webapp/res/jquery-easyui-1.4/themes/icon.css
@@ -92,6 +92,9 @@
 .icon-mini-edit{
 	background:url('icons/mini_edit.png') no-repeat center center;
 }
+.icon-refresh{
+	background:url('icons/refresh.png') no-repeat center center;
+}
 .icon-mini-refresh{
 	background:url('icons/mini_refresh.png') no-repeat center center;
 }
